modify textarea size

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <span id="icaoLabel">ICAO:</span>
                 <input id="icaoInput" type="text" autocomplete="off" spellcheck="false" oninput="icaoInput()">
                 <button id="icaoButton" onclick="icaoButton()">Refresh</button>
-                <textarea id="metar" disabled rows="5"></textarea>
+                <textarea id="metar" disabled></textarea>
             </fieldset>
             <p class="warningText">FOR FLIGHT SIMULATION USE ONLY</p>
         </main>
