--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Squawk!</title>
+        <link rel="icon" href="squawk.ico" type="image/x-icon">
         <link rel="stylesheet" href="squawk.css">
     </head>
     <body>
